# coralmicro

./: .gitignore  README.md  convert_to_tflite.py  requirements.txt  train_keyword_complete.ipynb
examples/: CMakeLists.txt
examples/classify_keywords/: CMakeLists.txt  README.txt  classify_keywords.cc
libs/tensorflow/: audio_models.cc
